responsive restaurant site

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
+		<script data-search-pseudo-elements src="https://kit.fontawesome.com/f737751420.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div>%svelte.body%</div>
